Toolbar secondary z-index fix for overlays

--- a/styles/gin_toolbar.scss
+++ b/styles/gin_toolbar.scss
@@ -784,6 +784,7 @@ a.toolbar-menu__trigger,
     .toolbar-bar {
       position: relative;
       height: $topBar;
+      z-index: 102;
 
       .toolbar-tab {
         display: block;
